--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,11 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 :root {
-  --color-primary: #f34762;
+  --color-primary: #f96b07;
   --color-secondary: #f4f5f6;
   --color-tertiary: #0d1013;
   --color-gray: #f6f6f6;
-  --color-subtitle: #f34762;
+  --color-subtitle: #f96b07;
   --background-color-1: linear-gradient(145deg, #1e2024, #23272b);
   --background-color-2: #212428;
   --shadow-1: 10px 10px 19px #1c1e22,
@@ -17,7 +17,7 @@
   --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
   --shadow-white-3: 5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
-  --gradient-red-hover: linear-gradient(145deg, #f34762, #d11414);
+  --gradient-red-hover: linear-gradient(145deg, #f96b07, #d11414);
   --color-heading: #ffffff;
   --color-heading-wv: #1e2125;
   --color-body: #878e99;
@@ -1285,7 +1285,7 @@ button.rn-btn:hover::before {
 }
 
 .section-title span.subtitle {
-  color: #f34762;
+  color: #f96b07;
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 14px;
@@ -1439,7 +1439,7 @@ button.rn-btn:hover::before {
   }
 }
 .slide .content .inner .title span {
-  color: #f34762;
+  color: #f96b07;
 }
 .slide .content .inner .title .header-caption span {
   color: var(--color-white);
@@ -2171,7 +2171,7 @@ button.close {
   }
 }
 .rn-nav-list .nav-item .nav-link:hover, .rn-nav-list .nav-item .nav-link.active {
-  color: #f34762;
+  color: #f96b07;
   background-color: transparent;
   border-color: transparent;
   border: 0 none;
