--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1612,6 +1612,7 @@ button.rn-btn:hover::before {
 .contact-details {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .contact-details li {
@@ -1729,6 +1730,17 @@ button.rn-btn:hover::before {
 @media only screen and (max-width: 767px) {
   .rn-service {
     padding: 30px 30px 30px 30px;
+  }
+  .contact-details li {
+    margin-right: 0;
+    margin-bottom: 15px;
+    flex-basis: 100%;
+  }
+  .contact-details li a, .contact-details li span {
+    font-size: 16px;
+  }
+  .contact-details li img {
+      height: 20px;
   }
 }
 @media only screen and (max-width: 479px) {
@@ -2216,7 +2228,7 @@ button.close {
 .personal-experience-inner .content .maintitle {
   font-size: 36px;
   font-weight: 700;
-  line-height: 62px;
+  line-height: 1.3;
   color: var(--color-lightn);
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
